crates/walrus-parser/snapshots/add_expr.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        Binary(
            BinaryExpr {
                lhs: Lit(
                    Int(
                        Dec(
                            DecInt {
                                span: 0..1,
                                text: "1",
                            },
                        ),
                    ),
                ),
                op: Add(
                    Plus {
                        span: 1..2,
                    },
                ),
                rhs: Lit(
                    Int(
                        Dec(
                            DecInt {
                                span: 2..3,
                                text: "2",
                            },
                        ),
                    ),
                ),
            },
        ),
    ),
)
