crates/walrus-parser/snapshots/continue_expr.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        Continue(
            ContinueExpr {
                kw_continue: KwContinue {
                    span: 0..8,
                },
            },
        ),
    ),
)
