crates/walrus-parser/snapshots/dec_int_lit.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        Int(
            Dec(
                DecInt {
                    span: 0..4,
                    text: "1234",
                },
            ),
        ),
    ),
)
