crates/walrus-parser/snapshots/empty_file.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        SourceFile {
            decls: [],
        },
    ),
)
